--- a/content/mitre-attack-active-scanning.html
+++ b/content/mitre-attack-active-scanning.html
@@ -103,7 +103,7 @@
 								<p>Larger companies like Microsoft or Google may have IP blocks or IP ranges of public IP addresses assigned to them. These IP blocks can be scanned to gather information on the company. Each IP address in the IP block(s) found can be iterated, checked for availability and a reverse IP lookup can be performed to generate a list of (sub)domains related to that company. Every result could be a vector for further information gathering, or compromise of the company. Let's learn how we go about gathering this information.</p>
 								<h6 id="finding_ip_blocks">1.1.1 Finding IP blocks</h6>
 								<br />
-								<p>A useful toolkit in finding company IP blocks is the <a href="https://bgp.he.net/">BGP Toolkit</a>. It allows you to query for information using an ASN number, company name or an IP address. If you haven't got an ASN number yet then the initial goal is to obtain one, which you can then use to display IP block information. You can obtain the ASN number by querying the tooliit with a company name or an IP address.</p>
+								<p>A useful toolkit in finding company IP blocks is the <a href="https://bgp.he.net/">BGP Toolkit</a>. It allows you to query for information using an ASN number, company name or an IP address. If you haven't got an ASN number yet then the initial goal is to obtain one, which you can then use to display IP block information. You can obtain the ASN number by querying the tooliit with a company name or an IP address. Another tool </p>
 
 							  	<p>In the following example we will query for "Porsche". As you can see the tool returns multiple results, including 7 ASN numbers. Since Porsche's roots are in germany, we're going to pick <a href="https://bgp.he.net/AS33848">AS33848</a>.</p>
 							  
@@ -372,6 +372,10 @@ ________________________________________________
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 			</div>
 		</div>
 	<!-- END OF BODY -->
