--- a/content/netcat.html
+++ b/content/netcat.html
@@ -82,6 +82,7 @@
 							<div class="col-sm-8">
 								<table class="table">
 									<!-- InstanceBeginEditable name="table" -->
+								  	<p>Last updated: 10 september 2024</p>
 									<tbody>
 									  <tr>
 									    <td>Author:</td>
@@ -118,7 +119,6 @@
 						<!-- InstanceBeginEditable name="article" -->
 						<div class="row top-buffer">
 						  <!-- ARTICLE CONTENT -->
-						  <p>Last updated: 10 september 2024</p>
 						  <ol>
 						    <li>
 						      <h5>Description</h5>
@@ -234,6 +234,10 @@ Connection to localhost 80 port [tcp/http] succeeded!
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
