--- a/content/theharvester.html
+++ b/content/theharvester.html
@@ -82,6 +82,7 @@
 							<div class="col-sm-8">
 								<table class="table">
 									<!-- InstanceBeginEditable name="table" -->
+									<p>Last updated: 10 september 2024</p>
 									<tbody>
 										<tr>
 											<td>Author:</td>
@@ -119,7 +120,6 @@
 						<!-- InstanceBeginEditable name="article" -->
 						<div class="row top-buffer">
                         <!-- ARTICLE CONTENT -->
-                        <p>Last updated: 10 september 2024</p>
                         <ol>
                             <li><h5>Description</h5></li>
                             <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different public sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
@@ -168,6 +168,10 @@ theharvester -d google.com -l 500 -b all -f results.html
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
