--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<img src="images/mitre/MITRE_logo.png" alt="MITRE ATT&CK" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/mitre-attack-active-scanning.html">MITRE ATT&amp;CK - Reconnaissance - Active Scanning Guide and examples</a>
+										<a href="content/mitre-attack-active-scanning.html">MITRE ATT&amp;CK - Reconnaissance - Active Scanning Guide and Examples</a>
 										<p><i>Last Updated: september 10th 2024</i></p>
 										<p>A comprehensive guide based on the techniques from the MITRE ATT&amp;CK framework. It shows multiple examples on how the techniques can be used in the real world coupled with an understandable technical explanation.</p>
 										<span>Tags:</span>
@@ -245,7 +245,7 @@
 										<img src="images/tools-icon-white.png" alt="Nikto" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/nikto.html">Nikto - Web Scanner Tutorial</a>
+										<a href="content/nikto.html">Nikto - Web Scanner Guide and Examples</a>
 										<p><i>Last Updated: september 10th 2024</i></p>
 										<p>Nikto is an Open Source (GPL) web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
 										<span>Tags:</span>
@@ -313,6 +313,10 @@
 					</div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<script>
 					function search() {
