--- a/readme.html
+++ b/readme.html
@@ -87,6 +87,10 @@
 					</div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<script>
 					function search() {
