--- a/content/fcrackzip-bruteforce-tutorial.html
+++ b/content/fcrackzip-bruteforce-tutorial.html
@@ -82,6 +82,7 @@
 							<div class="col-sm-8">
 								<table class="table">
 									<!-- InstanceBeginEditable name="table" -->
+									<p>Last updated: 10 september 2024</p>
 									<tbody>
 										<tr>
 											<td>Author:</td>
@@ -120,7 +121,6 @@
 						<div class="row top-buffer">
 							<!-- ARTICLE CONTENT -->
 							<p>0xL1NK#~ <a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpages</a></p>
-							<p>Last updated: 27 march 2019</p>
 							<ol>
 								<li><h5>Description</h5>
 									<p><i>fcrackzip</i> searches each provided zipfile for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
@@ -163,6 +163,10 @@ fcrackzip -u -D -p ~/rockyou.txt ~/file.zip
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
