--- a/content/nikto.html
+++ b/content/nikto.html
@@ -81,6 +81,7 @@
 							<div class="col-sm-8">
 								<table class="table">
 									<!-- InstanceBeginEditable name="table" -->
+									<p>Last updated: 10 september 2024</p>
 									<tbody>
 										<tr>
 											<td>Author:</td>
@@ -121,7 +122,6 @@
 						<!-- InstanceBeginEditable name="article" -->
 						<div class="row top-buffer">
 							<!-- ARTICLE CONTENT -->
-							<p>Last updated: 10 september 2024</p>
 							<ol>
 								<li><h5>Description</h5></li>
 									<p>Nikto is an Open Source web server scanner which performs comprehensive tests against web servers for multiple items, including over 6700 potentially dangerous files/CGIs, checks for outdated versions of over 1250 servers, and version specific problems on over 270 servers. It also checks for server configuration items such as the presence of multiple index files, HTTP server options, and will attempt to identify installed web servers and software. Scan items and plugins are frequently updated and can be automatically updated.</p>
@@ -203,6 +203,10 @@ nikto -update
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
