--- a/content/ssh.html
+++ b/content/ssh.html
@@ -82,6 +82,7 @@
 							<div class="col-sm-8">
 								<table class="table">
 									<!-- InstanceBeginEditable name="table" -->
+									<p>Last updated: 09 april 2019</p>
 									<tbody>
 										<tr>
 											<td>Author:</td>
@@ -120,7 +121,6 @@
 						<div class="row top-buffer">
 							<!-- ARTICLE CONTENT -->
 							<p>0xL1NK#~ <a href="https://en.wikipedia.org/wiki/Secure_Shell">SSH Wiki</a></p>
-							<p>Last updated: 09 april 2019</p>
 							<ol>
 								<li><h5>Description</h5>
 									<p>Secure Shell (SSH) is a cryptographic network protocol for operating network services securely over an unsecured network. Typical applications include remote command-line login and remote command execution, but any network service can be secured with SSH.</p>
@@ -177,6 +177,10 @@ ssh -L &lt;LPORT&gt;:&lt;RHOST&gt;:&lt;RPORT&gt; user@&lt;RHOST&gt;
 					  </div>
 				</div>
 				<!-- END OF CONTENT -->
+				<!-- RIGHT PANE -->
+				<div class="col-sm-2" id="right-pane">
+				</div>
+				<!-- END OF RIGHT PANE -->
 				<!-- SCRIPTS -->
 				<!-- END OF SCRIPTS -->
 			</div>
