Added host discovery guide

--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2 content-img">
+										<img src="images/host-discovery.png" alt="Host Discovery" height="100" width="100">
+									</div>
+									<div class="col-sm-10">
+										<a href="content/host-discovery-guide.html">Internal and External Host Discovery - Guide and Examples</a>
+										<p><i>Last Updated: september 12th 2024</i></p>
+										<p>A complete guide which covers internal and external host discovery using passive and active methods. Contains in-depth explanation and examples for tools like Nmap, Netdiscover and arp-scan.</p>
+										<span>Tags:</span>
+										<a class="tag">host</a>
+										<a class="tag">recon</a>
+										<a class="tag">discovery</a>
+										<a class="tag">scanning</a>
+										<a class="tag">enumeration</a>
+										<a class="tag">guide</a>
+									</div>
+								</div>
+								<hr class="solid">
+							</li>
+							<li>
+								<div class="row top-buffer">
+									<div class="col-sm-2 content-img">
 										<img src="images/mitre/MITRE_logo.png" alt="MITRE ATT&CK" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
