Implement 3rd party integrity check

--- a/content/hacking-methodology-guide.html
+++ b/content/hacking-methodology-guide.html
@@ -17,13 +17,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="../stacksec.css">
 
 		<meta charset="UTF-8">
 		<!-- InstanceBeginEditable name="description" -->
 		<meta name="description" content="A guide which covers the complete pentesting methodology in as much detail as possible.">
+		<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="keywords" -->
+		<meta name="keywords" content="gobuster,enumeration,golang,dns,subdirectories,hacking,ctf,tutorial,howto,brute,force,dir,vhost,subdomain,usage,example,exclude,syntax">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +65,8 @@
 				</div>
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
-					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
+					<div class="container-fluid">
+						<!-- InstanceBeginEditable name="h1" -->
 						<h1>Pentesting Methodology</h1>
 						<center><p><i>A complete guide with examples</i></p></center>
 					<!-- InstanceEndEditable -->
@@ -83,6 +87,7 @@
 							<h2>Table of Contents</h2>
 							<h3>Recon</h3>
 							<p><a href="host-discovery-guide.html">&gt; 1. Internal and External Host Discovery</a></p>
+							<p>- More guides on the way! -</p>
 							<br />
 							<!-- END TABLE OF CONTENTS -->
 						  <!-- END OF ARTICLE CONTENT -->
@@ -109,3 +114,4 @@
 	<!-- END OF BODY -->
 	</body>
 <!-- InstanceEnd --></html>
+
