--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script>
 		<script src="typewriter.js"></script>
 		<link rel="stylesheet" type="text/css" href="stacksec.css">
 
@@ -178,25 +178,6 @@
 										<a class="tag">craft</a>
 										<a class="tag">writeup</a>
 										<a class="tag">walkthrough</a>
-									</div>
-								</div>
-								<hr class="solid">
-							</li>
-							<li>
-								<div class="row top-buffer">
-									<div class="col-sm-2 content-img">
-										<img src="images/ssh.png" alt="SSH" height="100" width="100">
-									</div>
-									<div class="col-sm-10">
-										<a href="content/ssh.html">SSH - Local, Remote and Dynamic port forwarding</a>
-										<p><i>Last Updated: april 08th 2019</i></p>
-										<p>In this article we will cover the concept of local, remote and dynamic port forwarding via the Secure Socket Layer (SSH) protocol. This article is still partially under construction.</p>
-										<span>Tags:</span>
-										<a class="tag">ssh</a>
-										<a class="tag">forwarding</a>
-										<a class="tag">tunneling</a>
-										<a class="tag">port</a>
-										<a class="tag">22</a>
 									</div>
 								</div>
 								<hr class="solid">
